[package]
name = "roma-table"
version = "0.1.0"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
lazy_static = "1.4.0"
reqwest = { version = "0.10.10", features = ["blocking"] }
scraper = "0.12.0"
